<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_comentarios"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comment_name" />

    <EditText
        android:id="id/comment"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:hint="@string/comment_comentario" />

    <EditText
        android:id="id/email"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="@string/comment_correo"
        android:inputType="textEmailAddress"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@color/colorPrimary"
        android:text="@string/send"
        android:textColor="@color/white" />

</LinearLayout>
